minor bug fixes and overflow fix

--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -15,6 +15,9 @@ header {
                 line-height: 26px;
                 text-transform: uppercase;
                 margin-top: 30px;
+                @media (max-width: 460px) {
+                    font-size: 85px;
+                }
             }
     }
     .wrapper {
